--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "connect-assets": "^5.1.0",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
-    "dotenv": "^2.0.0",
+    "dotenv": "1.1.0",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "express-flash": "^0.0.2",
