--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
-    "BabyParse": "^0.4.3",
+    "babyparse": "^0.4.3",
     "bcrypt-nodejs": "^0.0.3",
     "bitgo": "0.11.64",
     "body-parser": "*",
