--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "express-flash": "^0.0.2",
     "express-handlebars": "^1.2.2",
     "express-session": "^1.13.0",
+    "express-subdomain": "^1.0.5",
     "express-validator": "^2.19.0",
     "fbgraph": "^1.1.0",
     "github-api": "^0.11.2",
+    "handlebars-helper-jade": "^0.1.1",
     "instagram-node": "^0.5.8",
     "jade": "^1.11.0",
     "lastfm": "^0.9.2",
@@ -57,7 +59,6 @@
     "request": "^2.69.0",
     "serve-favicon": "^2.3.0",
     "stripe": "^4.3.0",
-    "handlebars-helper-jade": "^0.1.1",
     "tumblr.js": "^0.0.7",
     "twilio": "^3.3.0-edge",
     "twit": "^2.2.1",
