--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "instagram-node": "^0.5.8",
     "jade": "^1.11.0",
     "lastfm": "^0.9.2",
+    "le_node": "1.2.0",
     "lob": "^3.7.0",
     "lodash": "^4.2.1",
     "lusca": "^1.3.0",
